--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -54,7 +54,7 @@ Another possible option to [configure the node is using YAML](https://github.com
 
 ## Working with the Cardano testnet
 
-Note that mainnet and testnet commands are very similar except for the flag usage. For example, when interacting with cardano-cli on mainnet, you should add the `--mainnet` flag. However, to use the same commands on testnet, you should use the `--tesntet-magic INTEGER` flag instead. `INTEGER` indicates the number of the testnet.
+Note that mainnet and testnet commands are very similar except for the flag usage. For example, when interacting with cardano-cli on mainnet, you should add the `--mainnet` flag. However, to use the same commands on testnet, you should use the `--testnet-magic INTEGER` flag instead. `INTEGER` indicates the number of the testnet.
 
 The Cardano public testnet integer is `1097911063`.
 
@@ -81,7 +81,7 @@ cardano-cli address build \
 --payment-verification-key-file payment.vkey \
 --stake-verification-key-file stake.vkey \
 --out-file payment.addr \
---tesntet-magic INTEGER
+--testnet-magic INTEGER
 ```
 
 To query the balance of the address, run:
@@ -89,14 +89,14 @@ To query the balance of the address, run:
 ```
 cardano-cli query utxo \
 --address $(cat payment.addr) \
---tesntet-magic INTEGER
+--testnet-magic INTEGER
 ```
 
 For more commands, see:
 
 -   [Creating keys and addresses](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/keys_and_addresses.md)
     
-Note to use the `--tesntet-magic INTEGER` flag instead of `--mainnet`.
+Note to use the `--testnet-magic INTEGER` flag instead of `--mainnet`.
 
 ### Funding the address using a faucet
 
@@ -114,4 +114,4 @@ You’re now ready to create, sign, and submit transactions on testnet. See the 
 
 -   [Building and signing transactions](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/building-and-signing-tx.md)
     
-Note to use the `--tesntet-magic INTEGER` flag instead of `--mainnet`.
+Note to use the `--testnet-magic INTEGER` flag instead of `--mainnet`.
