--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -3,7 +3,7 @@ title: Getting started
 metaTitle: Getting started with the Cardano testnet
 ---
 
-To get started and join the Cardano testnet, you should install and configure the Cardano node and the command line interface (CLI), and generate payment keys and addresses. Note, that you will also need **to get some test ada** to test your transactions, which will be possible to monitor using [Cardano Testnet Explorer](https://explorer.cardano-testnet.iohkdev.io/en) or [Testnet Cardanoscan](https://testnet.cardanoscan.io/) for example.
+To get started and join the Cardano testnet, you should install and configure the Cardano node and the command line interface (CLI), and generate payment keys and addresses. Note, that you will also need [to get some test ada](/cardano-testnet/tools/faucet) to test your transactions, which will be possible to monitor using [Cardano Testnet Explorer](https://explorer.cardano-testnet.iohkdev.io/en) or [Testnet Cardanoscan](https://testnet.cardanoscan.io/), for example.
 
 ## System requirements
 
@@ -56,7 +56,7 @@ Another possible option to [configure the node is using YAML](https://github.com
 
 Note that mainnet and testnet commands are very similar except for the flag usage. For example, when interacting with cardano-cli on mainnet, you should add the `--mainnet` flag. However, to use the same commands on testnet, you should use the `--testnet-magic INTEGER` flag instead. `INTEGER` indicates the number of the testnet.
 
-The Cardano public testnet integer is `1097911063`. If you're using a pre-production environment, its integer is `1`.
+The Cardano *public testnet* integer is `1097911063`. If you're using a *pre-production environment*, its integer is `1`.
 
 It is also useful to store this number in an environment variable: `export TESTNET=1097911063`. You can then use the flag as follows: `--testnet-magic $TESTNET`.
 
@@ -102,7 +102,7 @@ Note to use the `--testnet-magic INTEGER` flag instead of `--mainnet`.
 
 To fund your testnet address, go to the testnet faucet and request some test ada:
 
--   The testnet faucet
+-   [The testnet faucet](/cardano-testnet/tools/faucet)
 
 If you're working in a *pre-production environment* and have an API key, you can run the following command to fund your address:
 
