--- a/content/08-native-tokens/02-minimum-ada-value-requirement.mdx
+++ b/content/08-native-tokens/02-minimum-ada-value-requirement.mdx
@@ -7,10 +7,11 @@ UTXOs on the ledger may contain a heterogeneous collection of tokens, including 
 
 The maximum possible UTXO size (the sum of the sizes of all UTXO entries) is implicitly adjusted by raising and lowering the `min-ada-value` variable, which is calculated using the Alonzo parameter `coinsPerUTxOWord`. In this way, the constraint protects the Cardano ledger from growing beyond a certain size. A ledger without a size bound is vulnerable to being populated by so much data that users will unable to process it (or run a node) with machines meeting the recommended specifications for running a node.
 
-
-In the multi-asset Cardano ledger, UTXO entries will have different sizes. In particular, any entries containing a non-ada asset contain records of the Policy IDs, asset names, and quantities of each of the non-ada assets. To maintain the max UTXO size bound on the UTXO stored on the ledger with variable entry sizes, we must adjust the minimum ada value for each UTXO entry, based on its size.  
+In the multi-asset Cardano ledger, UTXO entries have different sizes. In particular, any entries containing a non-ada asset contain records of the Policy IDs, asset names, and quantities of each of the non-ada assets. To maintain the max UTXO size bound on the UTXO stored on the ledger with variable entry sizes, we must adjust the minimum ada value for each UTXO entry, based on its size.  
 
 The minimum number of ada required is [calculated using this method](https://github.com/input-output-hk/cardano-ledger/blob/master/doc/explanations/min-utxo-alonzo.rst) that is new in the Alonzo era.
+
+> Note that with an upcoming upgrade to Babbage era, the protocol parameter `coinsPerUTxOWord` changes to `coinsPerUTxOByte`, which means that the price will be calculated per one byte instead of per eight bytes. The calculation will therefore look as follows: `minUTxoVal = (160 + sizeInBytes (TxOut)) * coinsPerUTxOByte`. For more details, see [CIP-55](https://cips.cardano.org/cips/cip55/).
 
 As a consequence of this design,
 
@@ -21,7 +22,5 @@ As a consequence of this design,
 - Before transferring custom tokens, users may choose to use off-chain communication to negotiate who supplies the ada to cover the min-ada-value in the output made by the transferring transaction
 - To recover the ada stored alongside custom tokens in an output O, the user must either: a) Spend the output O, and burn the custom tokens stored therein b) Spend an output O and an output O’, and consolidate the tokens therein with the same collection of types of custom tokens stored in another output (spent within the same transaction)
 Eg., `(CryptoDoggiesPolicy, poodle, 1)` contained in O can be consolidated with `(CryptoDoggiesPolicy, poodle, 3)` in O’, for a total of `(CryptoDoggiesPolicy, poodle, 4)` in a new output made by the consolidating transaction.
-
 - Splitting custom tokens into more outputs than they were contained in before the transaction getting processed requires using, in total, more ada to cover the min-ada-value, as ada is needed in the additional outputs.
-
 
