--- a/content/08-cardano-sidechains/03-example-evm-sidechains/07-using-web3-js.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/07-using-web3-js.mdx
@@ -1,37 +1,37 @@
 ---
-title: Using Web3.js
-metaTitle: Using Web3.js
+title: Using web3.js
+metaTitle: Using web3.js
 ---
 
-
-
-# Introduction  
-Learn how to use the web3 Javascript interface with the Cardano EVM sidechain client for application development.  
-Walk through an example program that demonstrates some sample API calls.  
+This section helps learning how to use the web3 Javascript interface with the Cardano EVM sidechain client for application development. You can also walk through an example program that demonstrates some sample API calls.  
   
-The Ethereum web3.js interface provides many documented API calls.  
-The interface gives you full access to a copy of the Cardano EVM Sidechain. You can create a website or client that uses a remote EVM sidechain node to interact with the decentralized blockchain ledger.   
-The web3.js interface is also used to develop smart contracts in the Solidity language.  
+The Ethereum web3.js interface provides many documented API calls. The interface gives you full access to a copy of the Cardano EVM Sidechain. You can create a website or client that uses a remote EVM sidechain node to interact with the decentralized blockchain ledger. The web3.js interface is also used to develop smart contracts in the Solidity language.  
   
-This example will set up a simple Javascript program to demonstrate the concept.  
-See the end of this page for more information. 
-# Obtain permission to connect to a remote node
-Follow the instructions on the [node authentication page](../network/node-authentication). 
-You will receive a one-time access key that you must use within 24 hours.  
-This process will authorize you to connect the machine you are currently using to the RPC URL (`http://faucet.mamba.atago/`). It's the same URL as the faucet.
+This example will set up a simple Javascript program to demonstrate the concept. See the end of this page for more information. 
+
+## Obtain permission to connect to a remote node
+
+Follow the instructions on the [node authentication page](../network/node-authentication). You will receive a one-time access key that you must use within 24 hours. This process will authorize you to connect the machine you are currently using to the RPC URL (`http://faucet.mamba.atago/`). It's the same URL as the faucet.
   
 If you have previously authenticated your machine, you can reestablish the connection to the VPN with this command:
+
 ```
 sudo tailscale up --login-server https://headscale.pilz.iohkdev.io
 ```
 
-# Running a sample application
+## Running a sample application
+
 Follow these steps to create and run a web3.js application that checks the synchronization status and displays the contents of the latest block.
-## Set up the file structure
-1. Make sure [node.js](https://nodejs.org/en/download/) and [Yarn](https://classic.yarnpkg.com/lang/en/) are installed. There are plenty of instructional posts on the internet, so there is no need to repeat all that here.  
-2. Create a new directory (its name does not matter) and initialize it. You can use npm or Yarn. Both npm and Yarn create the file `package.json`. At the same time, Yarn also creates `yarn.lock`, and npm creates `package-lock.json`. From here on, the demonstration will use Yarn.  
+
+### Set up the file structure
+
+1. Make sure [node.js](https://nodejs.org/en/download/) and [Yarn](https://classic.yarnpkg.com/lang/en/) are installed. There are plenty of instructional posts on the internet.  
+2. Create a new directory (its name does not matter) and initialize it. You can use NPM or Yarn. Both NPM and Yarn create the file `package.json`. At the same time, Yarn also creates `yarn.lock`, and NPM creates `package-lock.json`. From here on, the demonstration will use Yarn.  
+
 On some systems, you are prompted for information that will be added to `package.json`. This information will be updated later when the web3 libraries are installed. You can just take the default values.    
+
 On Windows:  
+
  ```
     c:\>mkdir Atago-web3-example
     c:\>cd Atago-web3-example
@@ -48,6 +48,7 @@ On Windows:
     success Saved package.json
     Done in 151.31s.
     c:\Atago-web3-example>   
+```
 
 On Linux:   
 
@@ -89,13 +90,18 @@ On macOS:
     :sparkles:  Done in 56.13s.
 
 ```
-## Install the web3.js libraries
-The web3.js libraries are available as an npm package, so you can use npm or Yarn to install them in the directory you just created.  
-To install using Yarn:   
+### Install the web3.js libraries
+
+The web3.js libraries are available as an NPM package, so you can use NPM or Yarn to install them in the directory you just created.  
+
+To install using Yarn:
+
 ```
 yarn add web3
 ```
-## Check the contents of package.json
+
+### Check the contents of package.json
+
 Compare your copy of `package.json` with this example. Make sure all the keys and values are there.
 
 ```
@@ -112,8 +118,10 @@ Compare your copy of `package.json` with this example. Make sure all the keys an
         }
     }
 ```
-## Write the Javascript
+### Write the Javascript
+
 On all systems, create a file called `index.js` in the same directory as `package.json`. Edit it so that it looks like this:  
+
 ```
     1 const Web3 = require('web3')
     2 
@@ -126,18 +134,21 @@ On all systems, create a file called `index.js` in the same directory as `packag
     9   .catch((error) => console.error(error))
     10
 ```
-`Index.js` is the Javascript program.  
-Line 1 references the web3.js libraries.    
-Line 2 establishes a connection between this program and the Cardano EVM sidechain node.  
-The block beginning at line 4 retrieves the latest block that the client has downloaded so far.
-## Test the program
+
+`Index.js` is the Javascript program. Line 1 references the web3.js libraries. Line 2 establishes a connection between this program and the Cardano EVM sidechain node. The block beginning at line 4 retrieves the latest block that the client has downloaded so far.
+
+### Test the program
+
 Check that your connection to the EVM sidechain node on the Atago testnet is still active by accessing the URL in your browser.    
 
-Go to the directory you have created and run the sample program.
+Go to the directory you have created and run the sample program:
+
 ```
     npm start
 ```
-The result should be similar to this:  
+
+The result should be similar to this:
+
 ```
     C:\>
     C:\>cd Atago-web3-example
@@ -175,8 +186,13 @@ The result should be similar to this:
 
     C:\Atago-web3-example>
 ```
+
 The above results were obtained on Windows 10, 64-bit, version 21h2.
-## Observe the results
+
+### Observe the results
+
 The fields displayed are from the last block synchronized with the local node.
-# More information
-For more information about the web3.js API, see the [Read The Docs page](https://web3js.readthedocs.io/en/v1.2.4/web3.html).
+
+### More information
+
+For more information about the web3.js API, see this [Read The Docs page](https://web3js.readthedocs.io/en/v1.2.4/web3.html).
